front page modified

--- a/codeFormat/src/main/webapp/index.html
+++ b/codeFormat/src/main/webapp/index.html
@@ -63,14 +63,25 @@
     <div class="container">
         <div class="row">
             <ul id="top-menu" style="float:left;">
-              <li class="span1 active"><a href="#top"><span class="hidden">Top</span></a></li>
-              <li class="span2"><a href="/">Home</a></li>
+                <li class="span1 active"><a href="#top"><i class="icon-chevron-up"></i><span class="hidden">Top</span></a></li>
+                <li class="span2"><a href="/">Home</a></li>
             </ul>
 	</div>
     </div>
 </nav>
 
-
+<div class="resume-link"><div class="inner-container">
+    <div class="row-fluid">
+       <div class="span12 align-right">
+	    <ul class="ss borderless">
+		<li class="twitter"><a href="https://www.twitter.com/jamiebeach">twitter</a></li>
+		<li class="googleplus"><a href="https://plus.google.com/+JamieBeach/posts">googleplus</a></li>
+		<li class="linkedin"><a href="https://www.linkedin.com/in/jamiebeach78">linkedin</a></li>
+		<li class="mail"><a href="/contact">mail</a></li>
+	    </ul>
+	</div>
+    </div>
+</div></div>
 <div class="clearfix"> </div>
 </div></div>
 
@@ -87,8 +98,7 @@
 		<div class="row">
 			<div class="span1"></div>
 			<div class="span10 align-left" style="margin-bottom:25px;">
-				<p>清在下列框中粘贴代码.</p>
-				<p>选择语言后单击按钮,将弹出一个带有语法高亮代码的新窗口.</p>
+				<p>清在下列框中粘贴代码.选择语言后单击按钮,将弹出一个带有语法高亮代码的新窗口.</p>
 				<p>将代码全选复制并粘贴到文档中.</p>
 			</div>
 			</div class="span1"></div>
